tests/NormalTests/paczka1/fuzzy1/67409033.err
Error in line 4: 8W6hevFV S62 58,1
Error in line 3: Dwrmfxm1lI S345 5,9
Error in line 9: Dwrmfxm1lI S62 72,0
Error in line 13: Dwrmfxm1lI A79 12,3
Error in line 29: ZwmjS6279,5
Error in line 30: VBk8YOpS A79 68,5
Error in line 33: VBk8YOpS S879 12,3
Error in line 23: PtYRoUE0X S879 20,4
